--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,11 +8,18 @@
 
 body {
   background: var(--background);
-  font-family: 'Poppins', sans-serif;
+  padding: 0;
+  margin: 0;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: #ffffff;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #b1464a;
 }
