--- a/src/components/screens/home/Home.module.scss
+++ b/src/components/screens/home/Home.module.scss
@@ -1,3 +1,21 @@
 .description {
     font-size: clamp(1rem, 5vw, 5rem);
 }
+
+.models {
+    width: clamp(400px, 38vw, 1000px);
+    height: clamp(400px, 38vw, 1000px);
+
+    .streak {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 200%;
+        height: 50px;
+        background: linear-gradient(90deg, rgba(255, 255, 255, 0.8), transparent);
+        transform: translate(-50%, -50%) rotate(45deg);
+        pointer-events: none;
+        z-index: 2;
+        filter: blur(10px);
+    }
+}
